...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aKA-1q-Vts">
                                <rect key="frame" x="20" y="54" width="374" height="35"/>
                                <accessibility key="accessibilityConfiguration" identifier="expressionDisplayLabel">
                                    <accessibilityTraits key="traits" staticText="YES" updatesFrequently="YES"/>
                                </accessibility>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="l6N-aJ-ueF">
                                <rect key="frame" x="40" y="109" width="30" height="47"/>
                                <accessibility key="accessibilityConfiguration" identifier="sevenButton"/>
                                <state key="normal">
                                    <attributedString key="attributedTitle">
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="77S-HU-L6K">
                                <rect key="frame" x="192" y="109" width="30" height="47"/>
                                <accessibility key="accessibilityConfiguration" identifier="eightButton"/>
                                <state key="normal">
                                    <attributedString key="attributedTitle">
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="je1-UR-MLi">
                                <rect key="frame" x="344" y="109" width="30" height="47"/>
                                <accessibility key="accessibilityConfiguration" identifier="nineButton"/>
                                <state key="normal">
                                    <attributedString key="attributedTitle">
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fIK-yJ-dqL">
                                <rect key="frame" x="40" y="166" width="30" height="47"/>
                                <accessibility key="accessibilityConfiguration" identifier="fourButton"/>
                                <state key="normal">
                                    <attributedString key="attributedTitle">
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="z8n-xf-1CH">
                                <rect key="frame" x="192" y="166" width="30" height="47"/>
                                <accessibility key="accessibilityConfiguration" identifier="fiveButton"/>
                                <state key="normal">
                                    <attributedString key="attributedTitle">
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="nYJ-aU-Sde">
                                <rect key="frame" x="344" y="166" width="30" height="47"/>
                                <accessibility key="accessibilityConfiguration" identifier="sixButton"/>
                                <state key="normal">
                                    <attributedString key="attributedTitle">
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="nVX-qz-Khj">
                                <rect key="frame" x="40" y="223" width="30" height="47"/>
                                <accessibility key="accessibilityConfiguration" identifier="oneButton"/>
                                <state key="normal">
                                    <attributedString key="attributedTitle">
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="rXr-Pz-yHx">
                                <rect key="frame" x="192" y="223" width="30" height="47"/>
                                <accessibility key="accessibilityConfiguration" identifier="twoButton"/>
                                <state key="normal">
                                    <attributedString key="attributedTitle">
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="xti-4e-ndB">
                                <rect key="frame" x="344" y="223" width="30" height="47"/>
                                <accessibility key="accessibilityConfiguration" identifier="threeButton"/>
                                <state key="normal">
                                    <attributedString key="attributedTitle">
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="i3F-Hf-0A8">
                                <rect key="frame" x="192" y="280" width="30" height="47"/>
                                <accessibility key="accessibilityConfiguration" identifier="zeroButton"/>
                                <state key="normal">
                                    <attributedString key="attributedTitle">
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="SIr-mN-Xpc">
                                <rect key="frame" x="40" y="280" width="57" height="47"/>
                                <accessibility key="accessibilityConfiguration" identifier="evaluateButton"/>
                                <state key="normal">
                                    <attributedString key="attributedTitle">
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="kzF-C2-q0L">
                                <rect key="frame" x="335" y="280" width="39" height="47"/>
